[package]
name = "bin-io"
version = "0.1.0"
authors = ["Davide Mor <tazdevil971@gmail.com>"]
edition = "2018"
description = "Framework for reading and writing to binary files"
license = "MIT"
keywords = ["parser", "parsing", "serialization", "serializer", "binary"]

[dependencies]
byteorder = "1.3"
quick-error = "1.2"