[package]
name = "bin_io"
version = "0.1.1"
authors = ["Davide Mor <tazdevil971@gmail.com>"]
edition = "2018"
description = "Framework for reading and writing to binary files"
license = "MIT"
keywords = ["encoding", "decoding", "serialization", "deserializaton", "binary"]
repository = "https://github.com/Tazdevil971/bin_io"
documentation = "https://docs.rs/bin_io"
readme = "README.md"

[dependencies]
byteorder = "1.3"
quick-error = "1.2"